# vkwave-rs

./: .gitignore  readme.md
admin-bot/: Cargo.toml
admin-bot/admin-bot/: Cargo.toml
admin-bot/admin-bot/src/: handlers.rs  main.rs
admin-bot/vkwave-easy-contexts/: Cargo.toml
admin-bot/vkwave-easy-contexts/src/: lib.rs
vkwave/: Cargo.toml
vkwave/vkwave/: Cargo.toml
vkwave/vkwave-codegen/: Cargo.toml
vkwave/vkwave-codegen/src/: lib.rs
vkwave/vkwave-token/: Cargo.toml
vkwave/vkwave-token/src/: token.rs
vkwave/vkwave/src/: errors.rs  lib.rs
vkwave/vkwave/src/api/: api_context.rs  client.rs  mod.rs
vkwave/vkwave/src/bots/: mod.rs
vkwave/vkwave/src/bots/dispatcher/: dispatcher.rs
vkwave/vkwave/src/bots/event/: mod.rs
vkwave/vkwave/src/bots/handler/: handler.rs
vkwave/vkwave/src/longpoll/: bot.rs
vkwave/vkwave/src/models/: response.rs
