[package]
name = "admin-bot"
version = "0.1.0"
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vkwave = {path = "../../vkwave/vkwave"}
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0"
vkwave-codegen = {path = "../../vkwave/vkwave-codegen"}
vkwave-token = {path = "../../vkwave/vkwave-token"}
vkwave-easy-contexts = {path = "../vkwave-easy-contexts"}
pretty_env_logger = "0.4.0"
log = "0.4.11"
futures = "0.3"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }