[package]
name = "vkwave-codegen"
version = "0.1.0"
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "parsing"] }
proc-macro2 = "1"