[package]
name = "vkwave"
version = "0.1.0"
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
vkwave-token = {path = "../vkwave-token"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-recursion = "0.3.1"
thiserror = "1.0"
futures = "0.3"
paste = "0.1.18"
log = "0.4.8"